--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -394,7 +394,7 @@ ul.task-list input[type="checkbox"] {
     font-weight: 500;
 
     a {
-      color: var(--global-highlight-color);
+      color: var(--social-link-color);
       text-decoration: none;
       transition: color 0.2s ease-in-out;
 
