--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -28,6 +28,7 @@
   --global-back-to-top-text-color: #{$white-color};
   --global-newsletter-bg-color: #{$white-color};
   --global-newsletter-text-color: #{$black-color};
+  --social-link-color: #{$blue-color};
 
   --global-tip-block: #42b983;
   --global-tip-block-bg: #e2f5ec;
@@ -97,6 +98,7 @@ html[data-theme="dark"] {
   --global-back-to-top-text-color: #{$black-color};
   --global-newsletter-bg-color: #{$grey-color-light};
   --global-newsletter-text-color: #{$grey-color-dark};
+  --social-link-color: #{$pink-color};
 
   --global-tip-block: #42b983;
   --global-tip-block-bg: #e2f5ec;
